warm-moon.theme.css
/**
 * @name warm-moon
 * @version 1.0
 * @author cupboard_
 *
 * @source https://github.com/cupboardunderscore/warm-moon
 */

/* MODIFICATIONS */

/* Hides Store and Shop button */
[href="/store"],
[href='/shop'] {
	display: none;
}

/* Hide Nitro Gift button */
button[aria-label="Send a gift"] {
	display: none;
}

/* Hide GIF picker button
button[aria-label="Open GIF picker"] {
	display: none;
}*/

/* Hide sticker picker button
button[aria-label="Open sticker picker"] {
	display: none;
}
*/
/* Hide app launcher
[class*=channelAppLauncher_] {
	display: none !important;
}*/

/* Hide forward button (only on hover)
#message-actions-forward {
	display: none;
}

div[aria-label="Forward"] {
	display: none;
}
*/
/* Hide "Find or start conversation" button in home
.searchBar_f0963d {
	display: none;
}
*/
/* Allow the server tooltip to fit the entire server name in one line */
[class^=tooltip] {
	max-width: unset !important;
}

/* Hide chat box if you have no permissions to write in the channel
[class*=channelTextAreaDisabled] {
	display: none !important;
}

[class*=channelTextAreaDisabled] {
	opacity: 0 !important;
	position: absolute !important;
	height: 0px !important;
	width: 0px !important;
	z-index: 0 !important;
}
*/
/* Fix discord being shit with profiles
[class*=userPopoutOverlayBackground] {
	max-height: 60vh;
}
*/
/* I love performance */

* {
	will-change: scroll-position;
}

.members_c8ffbb,
/* members list */
.guilds_c48ade,
/* server list */
.chatContent_f75fb0,
/* main chat messages container */
.sidebarList_c48ade,
/* channels sidebar with animated banner */
.layerContainer_da8173,
/* app sibling container for overlay elements */
.app__160d8 {
	/* app container */
	contain: strict !important;
}

.typingDots_b88801,
.vc-typing-indicator-dots {
	contain: paint !important;
}

/* customize things here */
body {
	/* Use default Discord font instead of custom font */
	/*--font: '';*/

	/* sizes */
	--gap: 5px;
	/* spacing between panels */
	--divider-thickness: 4px;
	/* thickness of unread messages divider and highlighted message borders */

	/* animation/transition options */
	/*--animations: off;*/
	/* turn off to disable all midnight animations/transitions */
	/*--list-item-transition: 0.2s ease;*/
	/* transition for list items */
	/*--dms-icon-svg-transition: 0.4s ease;*/
	/* transition for the dms icon */

	/* top bar options */
	--move-top-bar-buttons: off;
	/* turn on to move inbox button to the server list (recommend setting top bar height to 24px) */
	--custom-app-top-bar-height: 36px;
	/* height of the titlebar/top bar (default is 36px)*/

	/* window controls */
	--custom-window-controls: off;
	/* turn off to use discord default window controls */
	--window-control-size: 14px;
	/* size of custom window controls */

	/* dms button background options */
	/*--dms-background: off;*/
	/* off to disable, image to use a background image, color to use a custom color/gradient */
	/*--dms-background-image-url: url('');*/
	/* url of the background image */
	/*--dms-background-image-size: cover;*/
	/* size of the background image (css background-size) */
	/*--dms-background-color: linear-gradient(70deg, var(--blue-2), var(--purple-2), var(--red-2));*/
	/* fixed color/gradient (css background) */

	/* background image options */
	/*--background-image: off;*/
	/* turn on to use a background image */
	/*--background-image-url: url('');*/
	/* url of the background image */
	/* you can set this to a more opaque color if floating panels look too transparent */

	/* other options */
	--small-user-panel: on;
	/* turn on to make the user panel smaller like in old discord */

	/* chatbar options */
	--flipped-chatbar: on;
	/* turn on to make the chatbar look nicer */
	--chatbar-height: 47px;
	/* height of the chatbar (52px by default, 47px to align it with the user panel) */
	--chatbar-padding: 2px;
	/* padding of the chatbar */
}
/* Unfuck the new discord ui */

/* custom guild icon size */
.visual-refresh {
    .container_c8ffbb /* member list */
    {
        margin-left: var(--gap);
        overflow: hidden;
        height: auto;
        min-width: var(--custom-member-list-width);
    }
	.guilds_c48ade /* server list */
	{
        margin-bottom: 0;
    }
	.panels_c48ade /* user panel */
	{
        /*width: 100%;
        position: static;
        grid-area: userPanel;
        margin: 12px 0 0 0;
        overflow: hidden;*/
        max-width: 226px;
        margin: 0 76px;
    }
	--size: 48;
	/* visual refresh is 40, old discord is 48. */
	--guildbar-avatar-size: calc(var(--size) * 1px);
	--guildbar-folder-size: var(--g-48);
	--g-48: calc(var(--guildbar-avatar-size) + 8px);
	--g-19-r: calc((var(--size) / 2 - 1) / var(--size) * 40px);
	--g-40-r: calc(var(--guildbar-avatar-size) / (var(--size) + 8) * 48);
	--g-48-r: calc(var(--guildbar-avatar-size) * 48 / 40);
	--g-56-r: calc(var(--g-48) * 56 / 48);
	--g-4-r: calc((var(--g-48-r) - var(--guildbar-avatar-size)) / -2);
	--g-4-r-2: calc((var(--g-56-r) - var(--g-48)) / -2);

	.folderIcon__48112>.wrapper_cc5dd2 {
		width: var(--g-48) !important;
		height: var(--g-48) !important;
	}

	.folderIcon__48112>.wrapper_cc5dd2>.svg_cc5dd2 {
		width: var(--g-56-r);
		height: var(--g-56-r);
		top: var(--g-4-r-2);
		left: var(--g-4-r-2);
	}

	.folderIcon__48112>.wrapper_cc5dd2>.svg_cc5dd2>foreignObject {
		width: calc();
	}

	.svg_cc5dd2 {
		width: var(--g-50-r);
		height: var(--g-48-r);
		top: var(--g-4-r);
		left: var(--g-4-r);
	}

	.wrapper__6e9f8,
	.icon__6e9f8,
	.childWrapper__6e9f8 {
		width: 40px;
		height: 40px;
	}

	.folder__48112,
	.folderIconWrapper__48112 {
		width: 48px;
		height: 48px;
	}

	.expandedFolderIconWrapper__48112 {
		width: var(--g-40-r);
		height: var(--g-40-r);
		margin: 0;
	}

	.closedFolderIconWrapper__48112 {
		width: var(--g-40-r);
		height: var(--g-40-r);
	}

	.guildIcon__48112 {
		width: var(--g-19-r);
		height: var(--g-19-r);
	}

	.stack_dbd263 {
		height: auto !important;
		padding-bottom: 4px !important;
	}

	.tutorialContainer__1f388 .numberBadge__2b1f5 {
		outline: 2px solid var(--bg-base-tertiary);
		border-radius: 50%;
	}

	.unreadMentionsIndicatorBottom_ef3116,
	.unreadMentionsIndicatorTop_ef3116 {
		width: calc(var(--guildbar-avatar-size) + var(--custom-guild-list-padding) * 2);
		padding: calc(var(--custom-guild-list-padding) / 2);
	}
}

/* Make server icons round again */
[class*="closedFolderIconWrapper_"]>[class*="guildIcon_"],
[data-list-item-id*="guildsnav_"]>[class*="icon_"] {
	border-radius: 50% !important;
}

/* Make member list more compressed */
.membersWrap_c8ffbb {
	min-width: unset;

	>.members_c8ffbb {
		width: 225px;

		.membersGroup_c8ffbb {
			padding: 24px 0px 16px;
			height: 40px;
		}

		.member__5d473>div>.memberInner__5d473 {
			padding: 5px;
		}
	}
}

/* Fuck your titlebar */
.visual-refresh {
	--custom-app-top-bar-height: 32px;
}

div[data-windows=false] div {
	display: none;
}

div[data-align=stretch].stack_dbd263 {
	padding-top: 10px;
}

.container_c8ffbb {
padding: 0px !important;
}

.themed_9293f {
	padding: 10px !important;
}

.messagecontent_c19a55 {
	padding: 0px !important;
}

/* Fixed this to preserve text visibility */
.markup_75297 {
	padding: 2px 0px !important;
	height: auto !important;
}

.subtitlecontainer_f75fb0 {
	padding: 0px 0px 0px !important;
}
.subtitleContainer_f75fb0 { /* Change Size of the Channel Box */
    height: 40px ;
}
.container__9293f { /* Move the Channel Name and Buttons */
    top: -8px ;
}

.membersGroup_c8ffbb {
  margin-left:20px ;
}

/* create space for inbox button */
.tutorialContainer__1f388 {
    margin-bottom: 0px;
}
/* move inbox button */
.recentsIcon_c99c29 {
    position: fixed;
    width: 4px;
    height: 4px;
    top: calc(var(--custom-app-top-bar-height) + 1px + var(--custom-guild-list-padding) + 48px);
    left: calc(var(--gap) + 1px + var(--custom-guild-list-padding));
}
/* style inbox button */
.recentsIcon_c99c29 .button__85643 {
    width: 100%;
    height: 100%;
    background-color: var(--background-surface-higher);
    border-radius: var(--radius-md);
    transition: background-color 0.15s ease-out;

    &:hover {
        background-color: var(--bg-brand);

        .icon__9293f {
            color: var(--white);
        }
    }
}
.recentsIcon_c99c29 .svg__2338f {
    transition: color 0.15s ease-out;
    width: 4px;
    height: 4px;
}
/* shift inbox popup panel into view */
.recentMentionsPopout__95796 {
    transform: translateX(100%);
}
svg.spotify-button-icon.vc-spotify-repeat {
    color: #3350e1 !important;
}

